default font weight 400, alignment fixes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@ html {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .circle {
